<resources>
    <string name="app_name">To Do App</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item...</string>
    <string name="save">Save</string>
    <string name="edit_item_header">Edit Item Below:</string>
    <string name="due_date_header">Set Due Date:</string>
    <string name="edit_due_date_header">Due Date:</string>
    <string name="edit_priority_header">Priority:</string>

    <string name="low_priority">Low</string>
    <string name="medium_priority">Medium</string>
    <string name="high_priority">High</string>

    <string name="day_title_today">Today</string>
    <string name="day_title_yesterday">Yesterday</string>
    <string name="day_title_tomorrow">Tomorrow</string>
</resources>
